<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_lilac">

    <ScrollView
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_0"
        android:layout_marginHorizontal="@dimen/dimen_8"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toTopOf="@id/cv_bottom_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_money_description"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:text="@string/money_transfer_text_money_to_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_money_to_send"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:autofillHints=""
                android:background="@drawable/et_background"
                android:drawableStart="@drawable/et_amount_drawable"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/money_transfer_hint_amount"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:maxLines="1"
                android:padding="@dimen/dimen_16"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_money_description" />

            <TextView
                android:id="@+id/tv_account_description"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32"
                android:text="@string/money_transfer_text_whom_to_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_money_to_send" />

            <EditText
                android:id="@+id/et_account_number"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32"
                android:autofillHints=""
                android:background="@drawable/et_background"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/money_transfer_hint_account_number"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/dimen_16"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_account_description" />

            <TextView
                android:id="@+id/tv_mpin_description"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32"
                android:text="@string/all_text_mpin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_account_number" />

            <com.cbsindia.cbs.ui.view.PinEntryEditText
                android:id="@+id/et_mpin"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_16"
                android:autofillHints=""
                android:fontFamily="@font/gilroy_semi_bold"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="@dimen/text_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mpin_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_bottom_card"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_8">

            <TextView
                android:id="@+id/tv_amount_to_send"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="@dimen/dimen_0"
                android:layout_marginHorizontal="@dimen/dimen_8"
                android:fontFamily="@font/gilroy_semi_bold"
                android:gravity="center_vertical"
                android:text="@string/all_text_zero"
                android:textColor="@color/black"
                android:textSize="@dimen/text_24"
                app:drawableStartCompat="@drawable/ic_currency_rupee"
                app:drawableTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8"
                android:background="@drawable/rounded_corner_primary_button"
                android:clickable="false"
                android:fontFamily="@font/gilroy_semi_bold"
                android:text="@string/money_transfer_btn_send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_amount_to_send"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>