<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".ui.view.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dimen_24" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dimen_150"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:adjustViewBounds="true"
            android:contentDescription="@string/launch_title"
            android:src="@drawable/cbs_logo"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toTopOf="@id/guideline_2" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:fontFamily="@font/gilroy_semi_bold"
            android:text="@string/launch_title"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_40"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/launch_sub_title"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/gilroy_medium"
            android:paddingHorizontal="@dimen/dimen_40"
            android:text="@string/all_text_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_16"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/gilroy_medium"
            android:paddingHorizontal="@dimen/dimen_40"
            android:text="@string/launch_btn_create_account"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/bt_login"
            app:layout_constraintTop_toBottomOf="@id/bt_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>